--- a/DialerUI/dialerui.ui
+++ b/DialerUI/dialerui.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>HI</string>
     </property>
    </widget>
   </widget>
