i love u dr park

--- a/DialerUI/dialerui.ui
+++ b/DialerUI/dialerui.ui
@@ -27,6 +27,19 @@
      <string>HI</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>80</y>
+      <width>141</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>dr park i love u</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
