--- a/DialerUI/dialerui.ui
+++ b/DialerUI/dialerui.ui
@@ -2,42 +2,57 @@
 <ui version="4.0">
  <class>Dialerui</class>
  <widget class="QMainWindow" name="Dialerui">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>840</width>
+    <height>900</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Dialerui</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QTableView" name="tableView">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>30</y>
-      <width>112</width>
-      <height>32</height>
+      <x>420</x>
+      <y>21</y>
+      <width>391</width>
+      <height>831</height>
      </rect>
     </property>
-    <property name="text">
-     <string>HI</string>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOn</enum>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>80</y>
-      <width>141</width>
-      <height>16</height>
+      <x>20</x>
+      <y>25</y>
+      <width>371</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
-     <string>dr park i love u</string>
+     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
@@ -46,7 +61,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>840</width>
      <height>22</height>
     </rect>
    </property>
@@ -60,7 +75,6 @@
    </widget>
    <addaction name="menuTools"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
   <action name="actionOpen_an_Address_Book">
    <property name="text">
     <string>Open an Address Book...</string>
