--- a/DialerUI/dialerui.ui
+++ b/DialerUI/dialerui.ui
@@ -68,6 +68,19 @@
      <string>9</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>160</y>
+      <width>211</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="inputMask">
+     <string>999-999-9999</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
