--- a/DialerUI/dialerui.ui
+++ b/DialerUI/dialerui.ui
@@ -47,7 +47,7 @@
      <rect>
       <x>20</x>
       <y>25</y>
-      <width>301</width>
+      <width>241</width>
       <height>61</height>
      </rect>
     </property>
@@ -196,6 +196,28 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Delete">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>50</y>
+      <width>51</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
