--- a/DialerUI/dialerui.ui
+++ b/DialerUI/dialerui.ui
@@ -220,6 +220,19 @@
      <bool>false</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="Call">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>430</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
