--- a/DialerUI/dialerui.ui
+++ b/DialerUI/dialerui.ui
@@ -52,7 +52,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="Nine">
